
name:                ohml
version:             0.1.0.0
synopsis:            A simple ML compiler
license:             MIT
author:              Andrew Stein
maintainer:          steinlink@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.8

executable ohml
  main-is: Ohml.hs
  hs-source-dirs: src             
  -- other-modules:       
  build-depends:
    base == 4.5.*,
    parsec,
    jmacro >= 0.6.3 && <0.7,
    containers >= 0.4 && < 0.5,
    directory